// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@tab: component checks * empty 1`] = `
<Wrapper
  forwardedRef={null}
/>
`;

exports[`@tab: component checks * icon 1`] = `
<Wrapper
  forwardedRef={null}
  icon={[Function]}
/>
`;

exports[`@tab: component checks * title (styled) 1`] = `
<Wrapper
  forwardedRef={null}
  title="title"
  titleStyle={
    Object {
      "color": "tomato",
      "fontSize": 24,
    }
  }
/>
`;

exports[`@tab: component checks * title 1`] = `
<Wrapper
  forwardedRef={null}
  title="title"
/>
`;
